2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/surface.cc:
	* cairomm/surface.h:
	* tests/test-surface.cc: added Surface::get_fallback_resolution() + test

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/surface.cc:
	* cairomm/surface.h:
	* tests/test-surface.cc: add Surface::get_content() + test

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/scaledfont.cc:
	* cairomm/scaledfont.h:
	* tests/test-scaled-font.cc: add ScaledFont::get_scale_matrix() + test

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/surface.cc:
	* cairomm/surface.h:
	* tests/test-surface.cc: add PsSurface::get_eps()

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.cc:
	* cairomm/context.h:
	* tests/test-context.cc: add Context::has_show_text_glyphs() + test

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/surface.cc:
	* cairomm/surface.h:
	* tests/test-surface.cc: change the names of the stream creation functions to
	'create_for_stream()' in order to avoid ambiguous template overload issues (I
	was getting compile failures when passing a literal string for the std::string
	parameter of the normal create() function)

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.cc:
	* cairomm/context.h:
	* tests/test-context.cc: add Context::get_font_options() and tests for it.

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/Makefile.am:
	* cairomm/quartz_font.cc: Added.
	* cairomm/quartz_font.h: Added.
	* docs/reference/Doxyfile.in:
	Added QuartzFontFace class

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/win32_font.h: fix header protection guards

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* tests/test-font-face.cc: add a test to use the Win32FontFace API written by
	Armin Burgmeier

2008-09-10  Armin Burgmeier  <armin@arbur.net>

	* cairomm/win32_font.h:
	* cairomm/win32_font.cc: Fixed the build on Windows.
